@@ -34,6 +34,7 @@ version 0.84.05
 	GUI: Support for single buffer mode mode (K-70)
 	Testing support for KP
 	K-70 GUI image save bugfixes
+	Android: Better error message if root access is missing.
 
 version 0.84.04 ( 2017-05-13 )
 	Android: adding icon
